#86245 fix side menu close button position on safari

--- a/Snowdog_Components/components/Organisms/side-menu/_side-menu.scss
+++ b/Snowdog_Components/components/Organisms/side-menu/_side-menu.scss
@@ -63,6 +63,7 @@
 
     &__close-button {
         top: $side-menu__modal-close-button-top;
+        right: $side-menu__modal-close-button-right;
         left: $side-menu__modal-close-button-left;
         background: $side-menu__modal-close-button-bg;
 
